<resources>
    <string name="app_name">Sadewa Kota Salatiga</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="password">Password </string>
    <string name="belum_memiliki_akun">Belum memiliki akun?</string>>
    <string name="daftar">daftar</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="nomor_hp">Nomor Hp</string>
    <string name="username">Username</string>
    <string name="reistrasi">Registrasi</string>
    <string name="nim">nim</string>
    <string name="alamat">alamat</string>
    <string name="nama">nama</string>
    <string name="full_name">full name</string>
    <string name="your_name">your name</string>
    <string name="your_email_address">your email address</string>
    <string name="Phone_number">phone number</string>
    <string name="reset_password">reset password</string>
    <string name="change_profile">edit profile</string>
    <string name="logout">logout</string>
    <string name="email_not_verfied">Email Not Verfied !</string>
    <string name="verify_now">Verify Now</string>
    <string name="wisata">WISATA</string>
    <string name="kuliner">KULINER</string>
    <string name="oleh_oleh">OLEH OLEH</string>
    <string name="penginapan">PENGINAPAN</string>
    <string name="kesenian">KESENIAN</string>
    <string name="cagar_budaya">CAGAR BUDAYA</string>
    <string name="save">save</string>
    <string name="profile">Profile</string>
    <string name="about_us">About Us</string>
    <string name="registrasi">Registrasi</string>


    <string name="map_box_access_token">pk.eyJ1IjoieXVzdWYxMyIsImEiOiJja3ZwOHRkbDY0bnFtMm5zMTk0YnYweDFhIn0.gjk81N3c8bWgvOhFb-JY5A</string>

</resources>