<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backlog"
    tools:context=".Login">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="120dp">
  <ImageView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_logologin"
      android:id="@+id/imglogo"/>
      <RelativeLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/rellog"
          android:layout_below="@+id/imglogo"
          android:layout_marginTop="70dp"
          android:layout_marginLeft="30dp"
          android:layout_marginRight="30dp"
          android:background="@drawable/ic_background_list">

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="Login"
              android:textStyle="bold"
              android:textSize="24dp"
              android:textAlignment="center"
              android:textColor="@color/green"
              android:layout_marginTop="20dp"
              android:id="@+id/txtlogin"/>
  <TextView
      android:id="@+id/textView12"
      android:layout_below="@+id/txtlogin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginLeft="25dp"
      android:textStyle="bold"
      android:text="@string/email"
      android:textColor="@color/green" />

  <EditText
      android:id="@+id/Email"
      android:layout_below="@+id/textView12"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="25dp"
      android:layout_marginTop="@dimen/margin_value_5dp"
      android:layout_marginEnd="25dp"
      android:background="@drawable/ic_background_editprofile"
      android:ems="10"
      android:inputType="textEmailAddress"
      android:padding="10dp"
      android:textColor="@color/green"
      android:textColorHint="@color/green"
      android:textSize="14sp"/>


  <TextView
      android:id="@+id/textView13"
      android:layout_below="@id/Email"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:textStyle="bold"
      android:layout_marginLeft="25dp"
      android:text="@string/password"
      android:textColor="@color/green"
     />

  <EditText
      android:id="@+id/password"
      android:layout_below="@id/textView13"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="25dp"
      android:layout_marginTop="5dp"
      android:layout_marginEnd="25dp"
      android:background="@drawable/ic_background_editprofile"
      android:ems="10"
      android:fontFamily="@font/aclonica"
      android:inputType="textPassword"
      android:padding="10dp"
      android:textColor="@color/green"
      android:textSize="14sp"
    />

  <Button
      android:id="@+id/loginBtn"
      android:layout_width="match_parent"
      android:layout_below="@+id/password"
      android:layout_height="wrap_content"
      android:layout_marginStart="220dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="25dp"
      android:fontFamily="@font/aclonica"
      android:text="@string/login"
      android:textSize="13sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password" />


  <TextView

      android:id="@+id/textView15"
      android:layout_below="@+id/loginBtn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:textAlignment="center"
      android:text="@string/belum_memiliki_akun"
      android:textColor="@color/green" />

  <TextView
      android:id="@+id/createText"
      android:layout_below="@+id/textView15"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:textAlignment="center"
      android:text="@string/registrasi"
      android:textColor="@color/green"
      android:textStyle="bold" />

  <TextView
      android:id="@+id/forgotPassword"
      android:layout_below="@+id/createText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAlignment="center"
      android:layout_marginBottom="20dp"
      android:text="@string/lupa_password"
      android:layout_marginTop="@dimen/margin_value_5dp"
      android:textColor="@color/green"
      android:textStyle="bold" />
      </RelativeLayout>
      <ProgressBar
          android:id="@+id/progressBar"
          android:layout_below="@+id/rellog"
          style="?android:attr/progressBarStyle"
          android:textAlignment="center"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:visibility="invisible"
          android:layout_marginTop="20dp"/>
    </RelativeLayout>

</RelativeLayout>
</ScrollView>