<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment"
    android:scrollbars="none"
    android:background="#f5feff">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="372dp"
                    android:background="@drawable/headhome"
                    android:scaleType="centerCrop"/>
                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="85dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_person_black_24dp"
                    app:strokeWidth="4dp"
                    android:padding="5dp"
                    app:strokeColor="@color/white"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/roundedCornersImageView"
                    android:background="@drawable/ic_background_list"
                    android:id="@+id/profileImage"
                    />
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="280dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/ic_background">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="20dp"
                            android:layout_marginTop="10dp">

                                <ImageView
                                    android:id="@+id/imageView2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:srcCompat="@drawable/ic_person_black_24dp" />
                        <TextView
                            android:layout_toEndOf="@+id/imageView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/full_name"/>


                        <TextView
                            android:id="@+id/profileName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/your_name"
                            android:textSize="16sp"
                            android:layout_marginLeft="34dp"
                            android:layout_marginTop="2dp"
                            android:layout_below="@+id/imageView2"
                            android:textStyle="bold"/>
                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_below="@id/profileName"
                            app:srcCompat="@drawable/ic_email_black_24dp"/>

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_toEndOf="@id/imageView3"
                            android:layout_marginTop="58dp"
                            android:layout_marginLeft="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/email"/>
                        <TextView
                            android:id="@+id/profileEmail"
                            android:layout_width="match_parent"
                            android:layout_below="@id/imageView3"
                            android:layout_marginTop="2dp"
                            android:layout_height="wrap_content"
                            android:text="@string/your_email_address"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_marginLeft="34dp"
                            />
                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/profileEmail"
                            android:layout_marginTop="10dp"
                            app:srcCompat="@drawable/ic_local_phone_black_24dp" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/imageView4"
                            android:text="@string/Phone_number"
                            android:layout_marginTop="115dp"
                            android:layout_marginLeft="10dp"/>

                        <TextView
                            android:id="@+id/profilePhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/imageView4"
                            android:text="@string/Phone_number"
                            android:layout_marginTop="2dp"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_marginLeft="34dp"/>

                        <Button
                            android:id="@+id/changeProfile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/profilePhone"
                            android:text="@string/change_profile"
                            android:layout_marginTop="70dp"
                            />
                        <Button
                            android:id="@+id/resetPasswordLocal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/changeProfile"
                            android:text="@string/reset_password" />
                        <Button
                            android:id="@+id/buttonout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="logout"
                            android:text="@string/logout"
                            android:layout_below="@+id/resetPasswordLocal"
                            tools:ignore="OnClick" />
                        </RelativeLayout>
                </RelativeLayout>
        </RelativeLayout>

</ScrollView>